[package]
name = "lambda"
version = "0.1.0"
authors = ["david-perez <d@vidp.dev>"]
edition = "2021"

[[bin]]
name = "bootstrap"
path = "src/bin/bootstrap.rs"

[profile.release]
panic = 'abort' # Less code to include into binary.
codegen-units = 1 # Optimization over all codebase (better optimization, slower build).
opt-level = 'z' # Optimization for size (or 's' for a less aggressive alternative).
lto = true # Link-time optimization using using whole-program analysis.

[dependencies]
axum = "0.5"
# Note that I'm specifying a path depedency as opposed to directly pointing to
# https://github.com/hugobast/aws-lambda-rust-runtime because of
# https://github.com/awslabs/aws-lambda-rust-runtime/issues/492
# But this directory contains the same tree as
# https://github.com/hugobast/aws-lambda-rust-runtime at commit
# `9e053ef1d4ae892fc9ce314e1fbef74e6b2fcb47`.
lambda_http = { path = "/tmp/aws-lambda-rust-runtime/lambda-http" }
lambda_runtime = { path = "/tmp/aws-lambda-rust-runtime/lambda-runtime" }
tokio = "1.19"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
pretty_assertions = "1.0"
